
* Implement API calls for projects.

* Store the base URL of a component. Deployer should provide it when adding
  a new component. Service endpoints originating from a component are
  expected to match its base URL; otherwise, a warning is issued.
  Re-registration with `snf-component-register' affects both the base and
  the ui URL.

* Management commands:
  * Introduced new commands:
     * component-show
  * Changed commands:
     * component-add got options --base-url and --ui-url

Cyclades
--------

* Implement Floating IP addresses, which are addresses that can be dynamically
  added and removed to a running server.

  * Implement the 'os-floating-ips' and 'os-floating-ip-pools' API extensions.
  * Implement 'snf-manage floating-ip-list' management command.
  * Add 'floating_ip_pool' attribute to networks. Such networks must exist to
    all Ganeti backends.

* Speed up server reconciliation, by performing parallel reconciliation for
  each backend.
* Implement IPv6 only networks.
* Implement 'resize' server action.

  * Implement the 'resize' server action, to change the flavor of a server.
  Only 'cpu' and 'memory' resizing is supported.

* Compute quotas for CPU and memory of running vms.
* Obsolete PUBLIC_USE_POOL setting, since Cyclades manages IP pool for all
  type of networks.
* Extend servers info API response with 'SNF:fqdn' attribute, and introduce
  CYCLADES_SERVERS_FQDN to set the template for servers FDQN.
* Extend servers info API response with 'SNF:port_forwarding' attribute,
  describing port fowarding rules (DNAT) that are applied to vms. The
  description of such rules is done via the new CYCLADES_PORT_FORWARDING
  setting.
* Change --dhcp option of network management commands from a flag to a boolean
  value, e.g. --dhcp=True
* Remove 'ARCHIPELAGO_BACKENDS' setting used to distinquish between backends
  that hosted only archipelago backends. Instead allocation is based on which
  disk-templates are enabled in each backend.