@@ -1,4 +1,4 @@
-# Copyright 2011-2012 GRNET S.A. All rights reserved.
+# Copyright 2011, 2012, 2013 GRNET S.A. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or
 # without modification, are permitted provided that the following
@@ -184,7 +184,3 @@ urlpatterns += patterns(
     'astakos.im.views',
     url(r'^get_menu/?$', 'get_menu'),
     url(r'^get_services/?$', 'get_services'))
-
-urlpatterns += patterns(
-    'astakos.api.user',
-    url(r'^authenticate/?$', 'authenticate'))
