@@ -1,4 +1,4 @@
-# Copyright 2011 GRNET S.A. All rights reserved.
+# Copyright 2011, 2012, 2013 GRNET S.A. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or
 # without modification, are permitted provided that the following
@@ -50,7 +50,6 @@ from synnefo_branding import settings as snf_settings
 from synnefo.util.version import get_component_version
 from synnefo.lib import join_urls
 
-from snf_django.lib.astakos import get_user
 from synnefo import cyclades_settings
 from synnefo.ui import settings as uisettings
 
